TicketingApp/site.css
:root {
    --background-color: #202020;
    --secondary-background-color: #2a2a2a;
    --primary-text-color: #e1de71;
    --secondary-text-color: #141414;
    --tertiary-text-color: #e5e3aa;
}

html,
body {
    height: 100%;
    width: 100%;
    margin: auto;
}

body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: var(--background-color);
}

h1 {
    color: var(--primary-text-color);
    font-size: 1.8em;
}

h2 {
    color: var(--tertiary-text-color);
    font-size: 1.25em;
}

h3, h4 {
    text-align: center;
}

h3 {
    color: var(--tertiary-text-color);
    font-weight: normal;
    font-size: 1.6em;
}

h4 {
    color: var(--tertiary-text-color);
    font-size: 2.5em;
    font-weight: 600;
    padding: 2.5em 0;
}

p {
    color: var(--secondary-text-color);
}

#page-container {
    position: relative;
    min-height: 100vh;
}

main {
    padding-bottom: 100px;
}

footer {
    background-color: var(--secondary-background-color);
    padding-top: 2em;
    position: fixed;
    height: 100px;
    width: 100%;
    bottom: 0;
    display: flex;
    justify-content: space-between;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 80px;
}

.header-element {
    flex: 1;
    margin-left: 1.25em;
    margin-right: 1.25em;
}

#date-and-time {
    text-align: end;
}

.button-layout {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    
    padding-bottom: 2em;
    margin: auto;
    width: 90%;
}

.ticketing-button {
    flex: 0 0 200px;
    padding: 0.75em;
    margin: 1.5em 1em;
    font-size: 1.2em;
    font-weight: bold;
    min-height: 3.5em;
    max-height: 5.5em;

    overflow: hidden;
    text-overflow: ellipsis;

    border: none;
    border-radius: 8px;

    background-color: var(--primary-text-color);
    color: var(--secondary-text-color);
    
    cursor: pointer;
}

.message {
    display: none;
    width: 75%;
    height: 90%;
    max-width: 800px;
    margin: auto;
}

.general-button {
    border: none;
    border-radius: 8px;
    padding: 0.75em 1.15em;
    font-weight: bold;
    background-color: var(--primary-text-color);
    color: var(--secondary-text-color);

    margin-left: 2em;
    margin-right: 2em;
    margin-bottom: 2em;

    font-size: 1.3em;
    cursor: pointer;
}

#back-button {
    position: relative;
    display: none;
    right: 0;
}

@media only screen and (min-width: 1440px) {
    .ticketing-button {
        flex: 0 0 350px;
        min-height: 4.5em;
        max-height: 7em;
        font-size: 1.6em;
    }

    h1 {
        font-size: 2.4em;
    }

    h2 {
        font-size: 1.8em;
    }

    h3 {
        font-size: 2em;
    }

    h4 {
        font-size: 3.5em;
    }
}

